# new-calculator

./: .env  .~lock.new_jeans_dataset.csv#  Dockerfile  NewPredictorController.py  docker-compose.prod.yml  docker-compose.yml  main.py  new_jeans_dataset.csv  new_jeans_dataset2.xlsx  pyproject.toml  requirements.txt
app/: .~lock.new_jeans_dataset.csv#  NewPredictorController.py  main.py  new_jeans_dataset.csv
docker/: py.Dockerfile
env/: pyvenv.cfg
test/: test_main.py  test_size_predictor_jeans.py
